tests/language_tests/pass/0145_len_after_array_assignment.ee
fn main() {
    let values = [1, 2];
    values[0] = [3, 4, 5];
    println(len(values));
    println(len(values[0]));
}
