tests/language_tests/fail/0084_array_write_out_of_bounds.ee
fn main() {
    let values = [1, 2, 3];
    values[3] = 4;
}
